--- a/src/themes/index.scss
+++ b/src/themes/index.scss
@@ -2,16 +2,17 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
-html {
-  font-size: 62.5%;
+@font-face {
+  font-family: "Montserrat";
+  src: url("./../assets/fonts/Montserrat/Montserrat-Regular.ttf") format("truetype"),
+  url("../assets/fonts/Montserrat/Montserrat-Bold.ttf") format("truetype"),
+  url("../assets/fonts/Montserrat/Montserrat-Italic.ttf") format("truetype"),
+  url("../assets/fonts/Montserrat/Montserrat-Light.ttf") format("truetype");
 }
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  font-size: 1.6rem;
+  font-family: "Montserrat";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
