--- a/src/themes/index.scss
+++ b/src/themes/index.scss
@@ -1,13 +1,15 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+@import "sweetalert2/src/sweetalert2.scss";
 
 @font-face {
   font-family: "Montserrat";
-  src: url("./../assets/fonts/Montserrat/Montserrat-Regular.ttf") format("truetype"),
-  url("../assets/fonts/Montserrat/Montserrat-Bold.ttf") format("truetype"),
-  url("../assets/fonts/Montserrat/Montserrat-Italic.ttf") format("truetype"),
-  url("../assets/fonts/Montserrat/Montserrat-Light.ttf") format("truetype");
+  src: url("./../assets/fonts/Montserrat/Montserrat-Regular.ttf")
+      format("truetype"),
+    url("../assets/fonts/Montserrat/Montserrat-Bold.ttf") format("truetype"),
+    url("../assets/fonts/Montserrat/Montserrat-Italic.ttf") format("truetype"),
+    url("../assets/fonts/Montserrat/Montserrat-Light.ttf") format("truetype");
 }
 
 body {
